[gd_scene load_steps=6 format=3 uid="uid://c8djpl1p14co4"]

[ext_resource type="Script" path="res://scripts/gui.gd" id="1_vw4i6"]
[ext_resource type="Texture2D" uid="uid://dyf8kuvqtbrgj" path="res://assets/sprites/health_bar_under.png" id="2_3n26e"]
[ext_resource type="Texture2D" uid="uid://dgji255kifyqo" path="res://assets/sprites/health_bar_progress_heal.png" id="2_qd7pp"]
[ext_resource type="Texture2D" uid="uid://dml1cl8cewjab" path="res://assets/sprites/health_bar_progress.png" id="3_g5j0h"]
[ext_resource type="Texture2D" uid="uid://mw24ja1vl2q7" path="res://assets/sprites/health_bar_progress_damage.png" id="4_g83wr"]

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_vw4i6")

[node name="DamageBar" type="TextureProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -13.0
offset_right = 205.0
offset_bottom = -5.0
grow_vertical = 0
value = 100.0
texture_under = ExtResource("2_3n26e")
texture_progress = ExtResource("4_g83wr")

[node name="HealBar" type="TextureProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -13.0
offset_right = 205.0
offset_bottom = -5.0
grow_vertical = 0
value = 100.0
texture_progress = ExtResource("2_qd7pp")

[node name="HealthBar" type="TextureProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -13.0
offset_right = 205.0
offset_bottom = -5.0
grow_vertical = 0
value = 100.0
texture_progress = ExtResource("3_g5j0h")

[node name="DamageHealBar" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DamageHealBar" to="." method="reset_damage_heal_bar"]
